data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1650.wast
;; 1. **Test Description**: Execute a `br_if` within a deeply nested structure with multiple `block` and `if` control instructions. Ensure the `br_if` targets the innermost block, validating correct stack unwinding and label indexing at this complex nested level.    - **Constraint Checked**: Correct label indexing and stack management when targeting deeply nested blocks.    - **Relation to Mismanagement of Block Nesting**: Misaligned index interpretation may cause branching to the incorrect block.

(assert_invalid
  (module (func $deeply-nested-br_if
    (block
      (block
        (block
          (if (i32.const 1)
            (then
              (br_if 2 (i32.const 1))
            )
          )
        )
      )
    )
  ))
  "unknown label"
)